--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -2,7 +2,7 @@ Version History
 ---------------
 
 0.8.2
- - Updated to LJM v0.2.23 (new functions and errorcode changes).
+ - Updated functions, constants and errorcodes to LJM v0.2.24.
    ^ New functions may be temprorary
 
 0.8.1 (02/06/2013)
