--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,6 +1,9 @@
 Version History
 ---------------
 
+0.8.4 (Not released)
+ - Improved platform detection when loading LJM library.
+
 0.8.3 (04/18/2013)
  - Updated functions, constants and errorcodes to LJM v0.2.35.
   * New eStreamStart/Read/Stop, addressToType/addressesToTypes
