--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,7 +1,8 @@
 Version History
 ---------------
 
-0.8.4 (Not released)
+0.8.4 (05/20/2013)
+ - Updated functions, constants and errorcodes to LJM v0.2.39.
  - Improved platform detection when loading LJM library.
 
 0.8.3 (04/18/2013)
