--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,6 +1,11 @@
 Version History
 ---------------
 
+0.8.5 (xx/xx/2013)
+ - Updated functions, constants and errorcodes to LJM v0.2.42.
+   * labjack.ljm.open was changed and is not compatible with
+     with LJM library versions below 0.2.42.
+
 0.8.4 (05/20/2013)
  - Updated functions, constants and errorcodes to LJM v0.2.39.
  - Improved platform detection when loading LJM library.
