Updated for LJM 1.0. Changed stream example name and updated it.

--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,6 +1,9 @@
 Version History
 ---------------
 
+0.8.7 (xx/xx/xxxx)
+ - Updated functions, documentation, constants and errorcodes to LJM v1.0.
+
 0.8.6 (08/16/2013)
  - Updated functions, documentation, constants and errorcodes to LJM v0.2.45.
    * eRead/eWriteString renamed to eRead/eWriteNameString in LJM v0.2.44.
