--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,6 +1,9 @@
 Version History
 ---------------
 
+0.9.0 (12/30/2013)
+ - Updated functions and errorcodes to LJM v1.2.
+
 0.8.9 (12/19/2013)
  - Updated constants to LJM v1.1.3.
  - Added I2C and SPI examples.
