Updated to LJM v1.7.2. Updated and added some examples. Added testExamples.py to run all examples. Website release.

--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,6 +1,11 @@
 Version History
 ---------------
 
+0.9.1 (09/04/2014)
+ - Updated functions and errorcodes to LJM v1.7.2. LJM_SetStreamCallback not
+   supported.
+ - Added and updated some examples.
+
 0.9.0 (12/30/2013)
  - Updated functions and errorcodes to LJM v1.2.
 
