--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,6 +1,9 @@
 Version History
 ---------------
 
+0.9.2 (10/09/2014)
+ - Fixed loading the LJM dll in Cygwin.
+
 0.9.1 (09/23/2014)
  - Updated stream examples.
 
