--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,6 +1,9 @@
 Version History
 ---------------
 
+0.9.3 (05/04/2015)
+ - Updated functions, constants and errorcodes to LJM v1.8.0.
+
 0.9.2 (10/09/2014)
  - Fixed loading the LJM dll in Cygwin.
 
