--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,6 +1,11 @@
 Version History
 ---------------
 
+1.2.0 (XX/XX/XXXX)
+ - Updated functions, constants and errorcodes to LJM v1.14.0.
+ - Restructured Examples folder.
+ - Added T4 examples.
+
 1.1.0 (12/03/2015)
  - Updated functions, constants and errorcodes to LJM v1.9.0.
  - Updated links in the README.txt and setup.py file.
