--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,9 +1,9 @@
 Version History
 ---------------
 
-1.2.0 (XX/XX/XXXX)
+1.14.0 (XX/XX/XXXX)
  - Updated functions, constants and errorcodes to LJM v1.14.0.
- - Restructured Examples folder.
+ - Matching Java wrapper version with the LJM version.
  - Added T4 examples.
 
 1.1.0 (12/03/2015)
