--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,9 +1,9 @@
 Version History
 ---------------
 
-1.16.01 (10/02/2017)
- - Updated functions, constants and errorcodes to LJM v1.16.01.
- - Matching Python wrapper version with the LJM version last tested with.
+1.16.0 (10/02/2017)
+ - Updated functions, constants and errorcodes to LJM v1.16.
+ - Changed Python wrapper version to the LJM version.
  - Restructured the Examples directory and added more examples.
  - Updated examples to support the T4.
 
