--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,6 +1,9 @@
 Version History
 ---------------
 
+1.17.0 (xx/xx/xxxx)
+ - Updated functions, constants and errorcodes to LJM v1.17.
+
 1.16.0 (12/04/2017)
  - Updated functions, constants and errorcodes to LJM v1.16.
  - Changed Python wrapper version to the LJM version.
