--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,6 +1,10 @@
 Version History
 ---------------
 
+x.xx.x (xx/xx/xxxx)
+ - Added string support to eWriteAddressByteArray and eWriteNameByteArray.
+ - Added SD examples.
+
 1.19.0 (10/19/2018)
  - Updated functions, constants and errorcodes to LJM v1.19.
  - Added stream callback functionality.
