--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -4,6 +4,8 @@ Version History
 x.xx.x (xx/xx/xxxx)
  - Updated functions, constants and errorcodes to LJM v1.20.
  - Added string support to eWriteAddressByteArray and eWriteNameByteArray.
+ - Changed distribution name from LJMPython to labjack-ljm for first PyPi
+   release. No change to namespace and package names.
  - Added SD examples.
 
 1.19.0 (10/19/2018)
