--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,6 +1,8 @@
 Version History
 ---------------
-
+1.20.2 (03/27/2020)
+ - Added stream-out function support and examples
+ 
 1.20.1 (02/28/2020)
  - Added device reconnect callback functionality and example.
  - Updated stream callback functionality.
