--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -1,7 +1,8 @@
 Version History
 ---------------
 1.21.0 (03/27/2020)
- - Added stream-out function support and examples
+ - Updated functions, constants and errorcodes to LJM v1.21.
+ - Added stream-out function support and examples.
  
 1.20.1 (02/28/2020)
  - Added device reconnect callback functionality and example.
